--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -36,6 +36,7 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
+     <Compile Include="Assets\CharacterController2D.cs" />
      <Compile Include="Assets\Scripts\NextScene.cs" />
      <Compile Include="Assets\Scripts\SystemController.cs" />
      <Compile Include="Assets\Scripts\force.cs" />
